--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --Yellow: #fad400;
     --Dark-desaturated-cyan: #25564b;
     --Dark-blue: #19536b;
-    --Dark-moderate-cyan: #458c7e;
+    --Dark-moderate-cyan: #9cdccc;
 
     --Very-dark-desaturated-blue: #23303e;
     --Very-dark-grayish-blue: #5a636c;
@@ -25,3 +25,343 @@ html, body{
     width: 100vw;
 }
 
+.container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section.home{
+    width: 100%;
+    height: 100vh;
+    background: url("./images/desktop/image-header.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+
+    header{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 30px 0;
+        margin-bottom: 50px;
+
+        img{
+            width: 160px;
+            margin-left: 30px;
+        }
+
+        .side{
+            width: 25%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-right: 30px;
+
+            a{
+                color: var(--White);
+                font-weight: 600;
+                font-size: 16px;
+                text-decoration: none;
+                transition: 0.3s ease;
+                &:hover{
+                    scale: 1.05;
+                }
+            }
+
+            .active{
+                background-color: var(--White);
+                color: var(--Very-dark-desaturated-blue);
+                border-radius: 25px;
+                padding: 10px 15px;
+                font-family: "Fraunces", sans-serif;
+                text-transform: uppercase;
+                cursor: pointer;
+                font-size: 12px;
+                transition: 0.3s ease;
+
+                &:hover{
+                    background-color: #ffffff64;
+                    color: var(--White);
+                }
+            }
+        }
+    }
+
+    h1{
+        font-size: 48px;
+        letter-spacing: 5px;
+        font-family: "Fraunces", sans-serif;
+        color: var(--White);
+        text-align: center;
+    }
+
+    img.arrow{
+        margin-top: 40px;
+    }
+}
+
+section.about{
+    width: 100%;
+    height: 250vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+    .details{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 100px;
+
+        h2{
+            font-size: 50px;
+            font-weight: 900;
+            letter-spacing: 3px;
+            font-family: "Fraunces", sans-serif;
+            color: var(--Very-dark-desaturated-blue);
+            text-align: left;
+        }
+
+        p{
+            font-size: 18px;
+            line-height: 1.5;
+            color: var(--Very-dark-grayish-blue);
+            text-align: left;
+            margin-top: 0;
+        }
+
+        a{
+            color: var(--Very-dark-desaturated-blue);
+            font-family: "Fraunces", sans-serif;
+            text-transform: uppercase;
+            font-weight: 800;
+            font-size: 18px;
+            text-decoration: none;
+            transition: 0.3s ease;
+            border-bottom: 8px solid #fad40031;
+            border-radius: 10px;
+            align-self: start;
+            margin-top: 20px;
+            &:hover{
+                scale: 1.05;
+            }
+        }
+    }
+
+    .details.reverse{
+        grid-column: 2 / 3;
+        a{
+            border-bottom: 8px solid #fa000031;
+        }
+    }
+
+    .image{
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .image.reverse{
+        grid-row: 2/3;
+        grid-column: 1 / 2;
+    }
+
+    .graphic, .photography{
+        position: relative;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .info{
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            padding: 20px;
+            color: var(--Dark-desaturated-cyan);
+            font-size: 16px;
+            text-align: center;
+
+            h2{
+                font-size: 32px;
+                font-family: "Fraunces", sans-serif;
+                letter-spacing: 3px;
+                font-weight: 900;
+                margin-bottom: 10px;
+            }
+
+            p{
+                font-size: 16px;
+                line-height: 1.5;
+            }
+        }
+
+    }
+
+    .photography{
+        .info{
+            color: var(--Dark-blue);
+        }
+    }
+}
+
+section.reviews{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    h1{
+        font-size: 22px;
+        text-transform: uppercase;
+        font-weight: 900;
+        letter-spacing: 5px;
+        font-family: "Fraunces", sans-serif;
+        color: var(--Grayish-blue);
+        margin-bottom: 50px;
+        text-align: center;
+    }
+
+    .testimonials{
+        width: 80%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+
+        .testimonial{
+            width: 300px;
+            justify-self: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            img{
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                margin-bottom: 40px;
+            }
+
+            p{
+                font-size: 16px;
+                line-height: 1.5;
+                font-weight: 600;
+                color: var(--Very-dark-grayish-blue);
+                text-align: center;
+                margin-top: 0;
+            }
+
+            h3{
+                font-size: 18px;
+                font-weight: 700;
+                font-family: "Fraunces", sans-serif;
+                color: var(--Very-dark-desaturated-blue);
+                text-align: center;
+                margin-bottom: -10px;
+            }
+
+            h4{
+                font-size: 14px;
+                font-weight: 600;
+                color: var(--Very-dark-grayish-blue);
+                text-align: center;
+            }
+        }
+    }
+}
+
+section.contacts{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .gallery{
+        width: 100%;
+        height: 50%;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+    }
+
+    .footer{
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: var(--Dark-moderate-cyan);
+        color: var(--Dark-desaturated-cyan);
+
+        h2{
+            font-size: 32px;
+            font-weight: 700;
+            letter-spacing: 3px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .text{
+            width: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            font-weight: 500;
+
+            p{
+                cursor: pointer;
+                transition: 0.3s ease-in;
+                &:hover{
+                    scale: 1.1;
+                }
+            }
+        }
+
+        .social{
+            width: 10%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            margin-top: 40px;
+
+            a{
+                transition: 0.3s ease;
+                text-decoration: none;
+
+                i{
+                    font-size: 24px;
+                    color: var(--Dark-desaturated-cyan);
+                }
+
+                &:hover{
+                    scale: 1.1;
+                    i{
+                        color: var(--Very-dark-desaturated-blue);
+                    }
+                }
+            }
+        }
+    }
+}
